version/0.1/_sources/examples/00-basic-pyvista-examples/picker.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-basic-pyvista-examples/picker.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-basic-pyvista-examples_picker.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-basic-pyvista-examples_picker.py:


.. _ref_picker:

===================
Activate the picker
===================

This example shows how to activate the picker, which is the tool that you
use to select an object in the plotter and get its name.

.. GENERATED FROM PYTHON SOURCE LINES 36-38

Relate ``CustomObject`` class with a PyVista mesh
=================================================

.. GENERATED FROM PYTHON SOURCE LINES 38-58

.. code-block:: Python


    import pyvista as pv

    # Note that the ``CustomObject`` class must have a way to get the mesh
    # and a name or ID.

    class CustomObject:
        def __init__(self):
            self.name = "CustomObject"
            self.mesh = pv.Cube()

        def get_mesh(self):
            return self.mesh

        def name(self):
            return self.name

    # Create a custom object
    custom_object = CustomObject()








.. GENERATED FROM PYTHON SOURCE LINES 59-61

Create a ``MeshObjectPlot`` instance
====================================

.. GENERATED FROM PYTHON SOURCE LINES 61-67

.. code-block:: Python


    from ansys.tools.visualization_interface import MeshObjectPlot

    # Create an instance
    mesh_object = MeshObjectPlot(custom_object, custom_object.get_mesh())








.. GENERATED FROM PYTHON SOURCE LINES 68-70

Plot the ``MeshObjectPlot`` instance
====================================

.. GENERATED FROM PYTHON SOURCE LINES 70-78

.. code-block:: Python


    from ansys.tools.visualization_interface import Plotter
    from ansys.tools.visualization_interface.backends.pyvista import PyVistaBackend

    pv_backend = PyVistaBackend(allow_picking=True)
    pl = Plotter(backend=pv_backend)
    pl.plot(mesh_object)
    pl.show()



.. image-sg:: /examples/00-basic-pyvista-examples/images/sphx_glr_picker_001.png
   :alt: picker
   :srcset: /examples/00-basic-pyvista-examples/images/sphx_glr_picker_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.369 seconds)


.. _sphx_glr_download_examples_00-basic-pyvista-examples_picker.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: picker.ipynb <picker.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: picker.py <picker.py>`
